# serial-rgb

./: .gitignore
c_picosdk/: CMakeLists.txt  compile_commands.json
c_picosdk/include/: define.h
c_picosdk/src/: PicoRGB.c  main.c
rs_embassy/: Cargo.toml
rs_embassy/.cargo/: config
rs_embassy/src/: main.rs  ws2812.rs
rs_rp2040_hal/: Cargo.toml
rs_rp2040_hal/.cargo/: config
rs_rp2040_hal/src/: main.rs
