[package]
name = "usb_serial_rp2040"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
fugit = "0.3.7"
heapless = "0.8.0"
panic-halt = "0.2.0"
rp2040-hal = "0.9.2"
usb-device = "0.2.9"
usbd-hid = "0.5.2"
usbd-serial = "0.1.1"
waveshare-rp2040-zero = "0.7.0"
smart-leds = "0.3.0"
ws2812-pio = "0.7.0"
nb = "1.1.0"
strtoint = { version = "0.1.0", default-features = false }
embedded-alloc = "0.5.1"
